# httpostfs

./: Makefile.am  README  README.md  cache.h  charset_utils.c  charset_utils.h  configure.ac  path_utils.c  path_utils.h  serv.php  serv.php5  viapfs-ls.c  viapfs-ls.h  viapfs.c  viapfs.h
client/: AUTHORS  Makefile.am  README  acinclude.m4  charset_utils.c  charset_utils.h  configure.ac  httpostfs.c  httpostfs.h  viapfs.c  viapfs.h
client/doc/: Makefile.am  clientside-spec  httpostfs.1
doc/: viaphpfs.1
server-php/: fs-config.php  fs-lib.php5  fs.php5  serv.php5
